@@ -10,6 +10,7 @@ BASE_IMAGE_VERSION=1.4.1
 
 # Liquibase
 LIQUIBASE_VERSION=4.21
+LIQUIBASE_VERSION_431=4.31
 
 #Postgres
 POSTGRES_BASE_IMAGE_148=postgres:14.8-bullseye
@@ -19,13 +20,17 @@ POSTGRES_BASE_IMAGE_175=postgres:17.5-bullseye
 #Source images
 DOCKER_IMAGE_JAVA11JRE_NAME=icellmobilsoft/base-java11jre
 DOCKER_IMAGE_JAVA11JRE=${DOCKER_IMAGE_JAVA11JRE_NAME}:${BASE_IMAGE_VERSION}
-
+DOCKER_IMAGE_JAVA21JRE_NAME=icellmobilsoft/base-java21jre
+DOCKER_IMAGE_JAVA21JRE=${DOCKER_IMAGE_JAVA21JRE_NAME}:${BASE_IMAGE_VERSION}
 
 ###############################################################################
 # base images
 ###############################################################################
 DOCKER_IMAGE_LIQUIBASE_NAME=icellmobilsoft/db-base-liquibase
 DOCKER_IMAGE_LIQUIBASE=${DOCKER_IMAGE_LIQUIBASE_NAME}:${VERSION}
+
+DOCKER_IMAGE_LIQUIBASE_NAME_431=icellmobilsoft/db-base-liquibase_431
+DOCKER_IMAGE_LIQUIBASE_431=${DOCKER_IMAGE_LIQUIBASE_NAME_431}:${VERSION}
 
 DOCKER_IMAGE_POSTGRES_NAME_148=icellmobilsoft/db-base-postgres_148
 DOCKER_IMAGE_POSTGRES_148=${DOCKER_IMAGE_POSTGRES_NAME_148}:${VERSION}
