@@ -1,0 +1,4 @@
+liquibase.headless: true
+# Inside the image we default to $LIQUIBASE_HOME, so we use relative paths
+# This means we use $LIQUIBASE_HOME/changelog and $LIQUIBASE_HOME/classpath directories
+classpath=changelog:classpath
